# Amphista

./: .gitignore  README.md  configure.ac  glusterfs.spec.in
cli/src/: cli-rpc-ops.c  cli.c
contrib/qemu/include/qemu/: atomic.h
extras/: glusterfs-logrotate
extras/systemd/: glusterd.service.in
libglusterfs/src/: common-utils.c  common-utils.h  compat.h  glfs-message-id.h  glusterfs.h  iatt.h  quota-common-utils.h  stack.h
xlators/cluster/dht/src/: dht-common.c  dht-common.h  dht-helper.c  dht-rename.c
xlators/features/locks/src/: common.c  posix.c
xlators/features/marker/src/: marker.c
xlators/features/quota/src/: quota-enforcer-client.c  quota.c  quota.h
xlators/mgmt/glusterd/src/: glusterd-quota.c  glusterd-utils.c  glusterd-volgen.c  glusterd-volume-set.c
xlators/nfs/server/src/: nfs3-helpers.c  nfs3.c
xlators/performance/: Makefile.am
xlators/performance/dirstat-cache/src/: Makefile.am  dirstat-cache.c  dirstat-cache.h  dsc-mem-types.h
xlators/performance/io-cache/src/: Makefile.am  io-cache.c  io-cache.h  ioc-fetch.c  ioc-inode.c  ioc-mem-types.h  page.c
xlators/performance/readdir-preload/src/: Makefile.am  readdir-preload-mem-types.h  readdir-preload-messages.h  readdir-preload.c  readdir-preload.h
xlators/performance/write-behind/src/: write-behind.c
xlators/protocol/client/src/: client.c
xlators/storage/posix/src/: posix.c
xlators/system/posix-acl/src/: posix-acl.c
